Fix: Ensure right navbar section aligns to far right

--- a/CinemaGestao2223226/wwwroot/css/site.css
+++ b/CinemaGestao2223226/wwwroot/css/site.css
@@ -799,6 +799,7 @@ footer a:hover {
   justify-self: end;
   white-space: nowrap;
   flex-wrap: nowrap;
+  justify-content: flex-end;
 }
 
 .site-header .navbar-brand {
